--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,6 +7,7 @@ builds:
       - darwin_amd64
       - darwin_arm64
       - linux_arm
+      - windows_amd64
     main: ./cmd/hooks-npm-binary-releaser
     ldflags:
       - -extldflags '-static'
